localhost resolves to ::1 on ipv6 systems - incompatible with listening address wich is ipv4 only

--- a/immich.conf
+++ b/immich.conf
@@ -4,8 +4,6 @@ DB_DATABASE_NAME=immich
 
 REDIS_HOSTNAME=localhost
 
-REVERSE_GEOCODING_DUMP_DIRECTORY=/var/lib/immich/.reverse-geocoding-dump
-
 IMMICH_MEDIA_LOCATION=/var/lib/immich/upload
 
 TYPESENSE_API_KEY=xyz
@@ -18,4 +16,4 @@ IMMICH_MACHINE_LEARNING_ENABLED=true
 # DISABLE_REVERSE_GEOCODING=false
 # REVERSE_GEOCODING_PRECISION=3
 
-IMMICH_MACHINE_LEARNING_URL=http://localhost:3003
+IMMICH_MACHINE_LEARNING_URL=http://127.0.0.1:3003
