--- a/io.github.tdesktop_x64.TDesktop.desktop
+++ b/io.github.tdesktop_x64.TDesktop.desktop
@@ -1,21 +1,21 @@
 [Desktop Entry]
 Name=64Gram Desktop
 Comment=Unofficial desktop version of Telegram messaging app
-TryExec=telegram-desktop
-Exec=telegram-desktop -- %u
-Icon=telegram
+TryExec=64gram-desktop
+Exec=64gram-desktop -- %u
+Icon=64gram
 Terminal=false
 StartupWMClass=64Gram
 Type=Application
 Categories=Chat;Network;InstantMessaging;Qt;
 MimeType=x-scheme-handler/tg;
-Keywords=tg;chat;im;messaging;messenger;sms;tdesktop;
+Keywords=tg;chat;im;messaging;messenger;sms;tdesktop;64gram;
 Actions=quit;
 SingleMainWindow=true
 X-GNOME-UsesNotifications=true
 X-GNOME-SingleWindow=true
 
 [Desktop Action quit]
-Exec=telegram-desktop -quit
+Exec=64gram-desktop -quit
 Name=Quit Telegram
 Icon=application-exit
