Fixed package for now, but workaround needed. trying to fix this correctly

--- a/dkms.conf
+++ b/dkms.conf
@@ -1,6 +1,6 @@
 PACKAGE_NAME="tuxedo-drivers"
-PACKAGE_VERSION="4.0.0"
-#AUTOINSTALL="yes"
+PACKAGE_VERSION="#MODULE_VERSION#"
+AUTOINSTALL="yes"
 
 DEST_MODULE_LOCATION[0]="/kernel/lib/"
 BUILT_MODULE_NAME[0]="clevo_acpi"
