Complete overhaul of the PKGBUILD Package/Install section for a more consistent experience --- Fix for `xperia-flashtool.desktop` file

--- a/xperia-flashtool.desktop
+++ b/xperia-flashtool.desktop
@@ -5,5 +5,5 @@ Name=Xperia Flashtool
 GenericName=Flashing Utility for Phones
 Comment=A S1 protocol flashing software for Sony Xperia phones
 Icon=/usr/share/icons/xperia-flashtool.png
-Exec=pkexec env DISPLAY=$DISPLAY XAUTHORITY=$XAUTHORITY /usr/bin/xperia-flashtool
+Exec=/usr/bin/xperia-flashtool
 Categories=Utility
