--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
-calamares/
-pkg
-src
-*.tar.*
+*
+!/.SRCINFO
+!/.gitignore
+!/49-nopasswd-calamares.rules
+!/PKGBUILD
+!/README.md
+!/calamares.desktop
+!/calamares_polkit
+!/paru-support.patch
