--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,11 @@
 # .gitignore for plasma5-applets-plasma-pstate-git
 
 # ignore built packages (regardless of compression method used)
-*.pkg.t*
+*.pkg.*
 
 # ignore intermediate packaging and build directories
 pkg/
 src/
 
-# ignore makepkg mirror of source git repository
+# ignore local makepkg mirror of source git repository
 plasma-pstate/
-
