Update libgpio dependency to python-periphery

--- a/moonraker.conf
+++ b/moonraker.conf
@@ -13,7 +13,16 @@ klippy_uds_address: /run/klipper/ud_sock
 #max_upload_size: 200
 
 [file_manager]
+#   When set to True the file manager will add uploads to the job_queue when
+#   the `start_print` flag has been set.  The default if False.
 #queue_gcode_uploads: False
+#   By default Moonraker will validate that Klipper's configuration file exists
+#   within the data path's "config" folder, as this is a requirement for
+#   Moonraker to write to the configuration.  If this validation check fails
+#   Moonaker will warn the user. Installations that do not wish to use Moonraker
+#   to manage Klipper's configuration may set this option to False to bypass the
+#   location check.  The default is True.
+check_klipper_config_path: False
 #   When set to True gcode files will be run through a "preprocessor"
 #   during metdata extraction if object tags are detected.  This preprocessor
 #   replaces object tags with G-Code commands compatible with Klipper's
