Fork PKGBUILD to use git version   Additionally,   - Various minor changes   - Bring tailwind to fix broken css   - Make build flags closer to `justfile`

--- a/rimgo.conf
+++ b/rimgo.conf
@@ -1,4 +1,51 @@
+##################################################
+#
+#  Rimgo is configured using environment variables
+#
+#  This file should automatically be loaded
+#  by `rimgo.service` systemd unit
+#  through the `EnvironmentFile=` line
+#
+##################################################
+
+# Port to listen on
+PORT=3000
+
+# Address to listen on
 ADDRESS=0.0.0.0
-PORT=12345
+
+# Should not be changed unless you have a registered Imgur app
 IMGUR_CLIENT_ID=546c25a59c58ad7
+
+# Use WebP for images unless the no_webp query parameter is set
 FORCE_WEBP=0
+
+# Optional, URL to privacy policy
+PRIVACY_POLICY=
+
+# Optional, message to display on privacy page
+PRIVACY_MESSAGE=
+
+# (clearnet only) The country the instance is located
+PRIVACY_COUNTRY=
+
+# (clearnet only) The provider the instance is using (ISP for self-hosted, or hosting provider)
+PRIVACY_PROVIDER=
+
+# Whether the instance uses Cloudflare proxy (orange cloud icon)
+PRIVACY_CLOUDFLARE=
+
+# (required) Whether the instance collects data
+PRIVACY_NOT_COLLECTED=
+
+# Whether the instance collects IP addresses
+PRIVACY_IP=
+
+# Whether the instance collects request URLs
+PRIVACY_URL=
+
+# Whether the instance collects user agents
+PRIVACY_DEVICE=
+
+# Whether the instance only collects this data for diagnostic purposes
+PRIVACY_DIAGNOSTICS=
