Add override example to service file.

--- a/lidarr.service
+++ b/lidarr.service
@@ -1,6 +1,15 @@
+# Be sure to use `systemctl edit radarr` to modify this service with an override.conf because
+# direct changes will be overwritten by package updates.
+#
+# A user per service w/ shared group setup would have an override like:
+# [Service]
+# Group=sharedgroupname
+# Umask=002
+
 [Unit]
 Description=Lidarr Service
-After=syslog.target network.target
+Wants=network-online.target
+After=network-online.target
 
 [Service]
 User=lidarr
