Updated dependencies based on setup.sh shipped with studio

--- a/simplicitystudio5.desktop
+++ b/simplicitystudio5.desktop
@@ -2,8 +2,8 @@
 Version=5
 Type=Application
 Terminal=false
-Exec=/usr/bin/simplicitystudio5
+Exec=GDK_BACKEND=x11 /usr/bin/simplicitystudio5
 Name=Simplicity Studio
 Path=/opt/simplicitystudio5
 Icon=/opt/simplicitystudio5/icon.xpm
-Categories=Development
+Categories=Development;IDE;
