autu: Update to 1.3.6-2

--- a/planetmule.desktop
+++ b/planetmule.desktop
@@ -7,4 +7,4 @@ Terminal=false
 Type=Application
 StartupNotify=false
 Categories=GNOME;Game
-Icon=/opt/mule/data/icon.gif
+Icon=/opt/planemule/planemule.png
