testing.r2376.becca5eb-1

--- a/nzbget.service
+++ b/nzbget.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=NZBGet Daemon
-Documentation=https://nzbget-ng.github.io/Documentation
+Documentation=https://nzbget.com/documentation/
 After=network.target
 
 [Service]
