--- a/config.json
+++ b/config.json
@@ -24,7 +24,8 @@
       "type": "tun",
       "inet4_address": "172.19.0.1/30",
       "auto_route": true,
-      "strict_route": false
+      "strict_route": false,
+      "sniff": true
     }
   ],
   "outbounds": [
