--- a/wgui.service
+++ b/wgui.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/systemctl reload wg-quick@wg0.service
+ExecStart=/usr/bin/systemctl restart wg-quick@wg0.service
 
 [Install]
 RequiredBy=wgui.path
