patch no longer required - path controlled by env var

--- a/immich.conf
+++ b/immich.conf
@@ -10,6 +10,7 @@ IMMICH_MACHINE_LEARNING_ENABLED=true
 
 # DISABLE_REVERSE_GEOCODING=false
 # REVERSE_GEOCODING_PRECISION=3
+IMMICH_REVERSE_GEOCODING_ROOT=/var/lib/immich-revgeo
 
 IMMICH_MACHINE_LEARNING_URL=http://127.0.0.1:3003
 
