fix: xdg-desktop-portals, thanks trillian and yrlf

--- a/sway-portals.conf
+++ b/sway-portals.conf
@@ -1,4 +1,5 @@
 [preferred]
 default=gtk
-org.freedesktop.impl.portal.Screencast=wlr
+org.freedesktop.impl.portal.ScreenCast=wlr
 org.freedesktop.impl.portal.Screenshot=wlr
+org.freedesktop.impl.portal.Inhibit=none
