make systemd unit work

--- a/systemd-worker.service
+++ b/systemd-worker.service
@@ -4,6 +4,7 @@ After=network.target
 
 [Service]
 User=mas
+Environment=HOME=/var/lib/matrix-authentication-service
 WorkingDirectory=/usr/share/matrix-authentication-service
 ExecStart=/usr/bin/mas-cli worker -c /etc/matrix-authentication-service/config.yaml
 Restart=on-failure
