refactor and update the package to version 11.0.0

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,14 @@
-*
-!.gitignore
-!.SRCINFO
-!PKGBUILD
-!*.install
-!*.patch
-!*.diff
+# Source and package folders
+src/
+pkg/
+
+# The bare Git repository
+mingw-w64/
+
+# Archive files
+*.zip
+*.tar.gz
+*.tar.bz2
+
+# Package files
+*.zst
