--- a/openssl-gost.cnf
+++ b/openssl-gost.cnf
@@ -1,5 +1,5 @@
-openssl_conf = openssl_def
-[openssl_def]
+# GOST Engine Configuration
+[openssl_gost]
 engines = engine_section
 
 [engine_section]
@@ -7,5 +7,7 @@ gost = gost_section
 
 [gost_section]
 engine_id = gost
+dynamic_path = /usr/lib/ssl/engines/libgost.so
 default_algorithms = ALL
-CRYPT_PARAMS = id-Gost28147-89-CryptoPro-A-ParamSet
+
+# GOST Engine Configuration End
