--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
 libxputty/
-libxputty-fix-*.patch
 pkg/
 src/
 Xmonk.lv2/
-xmonk-lv2-git-*.pkg.tar.*
-xmonk-lv2-git-*.src.tar.gz
+xmonk.lv2-git-*.pkg.tar.*
+xmonk.lv2-git-*.src.tar.gz
